agenda all components update (remote and gui transfer to 1.1.0, Address changed with PhysicalAddress, osgi separation, poms polished, documentation added